@@ -16,3 +16,5 @@ run_emerge "-e system"
 
 rm -f /var/lib/portage/world
 touch /var/lib/portage/world
+
+rm -f /var/log/emerge.log /var/log/portage/elog/*
