@@ -1,6 +1,12 @@
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Id: $
 
+  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/stage1/stage1-chroot.sh, targets/stage2/stage2-chroot.sh,
+  targets/stage3/stage3-chroot.sh:
+  We need to be sure we clear out /var/log/portage/elog as well as
+  /var/log/emerge.log for stages 1 through 3.
+
   14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
   modules/generic_stage_target.py,
   targets/livecd-stage2/livecd-stage2-controller.sh,
